# Nebrix-Lang

./: CMakeLists.txt  README.md  test.nl
src/: common.cpp  common.hpp  main.cpp
src/ast/: node.hpp
src/helper/errors/: lexer_error.hpp
src/helper/flags/: flags.hpp  getCurrentTime.hpp  version.hpp
src/lexer/: lexer.cpp  lexer.hpp  tokens.cpp  tokens.hpp
